changed name of bg

--- a/style1.css
+++ b/style1.css
@@ -3,7 +3,7 @@ html {
 }
 body {
      background-color: #0F0F0F;
-     background-image: url(images/ibspace.webp);
+     background-image: url(images/itsybitsyspace.webp);
      background-size: 100%;
      background-size: cover;
      background-repeat: no-repeat;
