changed ibspace to ibspace to refresh browsers

--- a/style1.css
+++ b/style1.css
@@ -2,7 +2,7 @@ html {
  height: 100%;
  width: 100%;
  background-color: #0F0F0F;
- background: url(images/ibspace.webp);
+ background: url(images/ibspace2.webp);
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: cover;
