--- a/style1.css
+++ b/style1.css
@@ -8,6 +8,9 @@ html {
  background-size: cover;
  background-origin: content-box;
 }
+body {
+ font-family: Verdana, sans-serif;
+}
 .centerlogo {
  top: 50%;
  left: 50%;
@@ -49,4 +52,10 @@ button.soc:hover {
 }
 li {
  display: inline-block;
+}
+.bottomright {
+ position: absolute;
+ bottom: 0;
+ right: 0;
+ margin: 0;
 }
