just so you don't get flashbanged when/if the site loads slowly
lol

--- a/style1.css
+++ b/style1.css
@@ -1,7 +1,7 @@
 html {
  height: 100%;
  width: 100%;
- background-color: #22c5de;
+ background-color: #0D6473;
  background-image: url(images/bgs/ibspace.webp);
  background-repeat: no-repeat;
  background-attachment: fixed;
