--- a/style1.css
+++ b/style1.css
@@ -29,7 +29,7 @@ button.soc {
  border: 5px solid #000000;
  padding: 12px;
  text-align: center;
- margin: 0 0.3vw;
+ margin: 0 clamp(4px, 0.3vw, 2vw);
 }
 button.soc:hover {
  background: #a80755;
@@ -60,8 +60,8 @@ button.soc2:hover {
  left: 50%;
  transform: translate(-50%, -90%);
  padding-left: 0;
- margin: 0 0.25vw;
- justify-content: evenly;
+ margin: 0 1vw;
+ font-size: 24px;
 }
 .socbar2 {
  display: flex;
@@ -70,8 +70,6 @@ button.soc2:hover {
  left: 50%;
  transform: translate(-50%, -10%);
  padding-left: 0;
- margin: 0 0.25vw;
- justify-content: evenly;
 }
 .socbar:after {
  content: "";
