--- a/shows.styles.css
+++ b/shows.styles.css
@@ -18,20 +18,10 @@ body {
  right: 0;
  transform: translate(-50%, -45%);
  position: absolute;
- max-width: 62.5vw;
+ max-width: 75vw;
  max-height: 55vh;
 }
-iframe {
- top: 87.5%;
- left: 50%;
- bottom: 0;
- right: 0;
- transform: translate(-50%, -87.5%);
- position: absolute;
- max-width: 62.5vw;
- max-height: 12.5vh;
-}
-button.soc {
+button.men {
  display: flex;
  transition: all 0.2s ease, visibility 0s;
  border-radius: 25px;
@@ -41,11 +31,11 @@ button.soc {
  text-align: center;
  margin: 0 0.3vw;
 }
-button.soc:hover {
+button.men:hover {
  background: #AC211B;
  cursor:pointer;
 }
-.socbar {
+.menbar {
  display: flex;
  position: absolute;
  top: 10%;
@@ -55,10 +45,39 @@ button.soc:hover {
  margin: 0 0.25vw;
  justify-content: evenly;
 }
+.menbar:after {
+ content: "";
+ clear: both;
+ display: table;
+}
+.socbar {
+ display: flex;
+ position: absolute;
+ top: 90%;
+ left: 50%;
+ transform: translate(-50%, -90%);
+ padding-left: 0;
+ margin: 0 1vw;
+ font-size: 24px;
+}
 .socbar:after {
  content: "";
  clear: both;
  display: table;
+}
+button.soc {
+ display: flex;
+ transition: all 0.2s ease, visibility 0s;
+ border-radius: 100px;
+ background: #ffffff;
+ border: 5px solid #000000;
+ padding: 3px 25px 3px 25px;
+ text-align: center;
+ margin: 0 clamp(4px, 0.3vw, 10px);
+}
+button.soc:hover {
+ background: #a80755;
+ cursor:pointer;
 }
 li {
  display: inline-block;
