--- a/style1.css
+++ b/style1.css
@@ -35,7 +35,7 @@ button.soc:hover {
  background: #a80755;
  cursor:pointer;
 }
-button.soc2 {
+button.men {
  display: flex;
  transition: all 0.2s ease, visibility 0s;
  border-radius: 25px;
@@ -49,7 +49,7 @@ button.soc2 {
  text-align: center;
  margin: 0 0.3vw;
 }
-button.soc2:hover {
+button.men:hover {
  background: #000000;
  cursor:pointer;
 }
@@ -63,7 +63,7 @@ button.soc2:hover {
  margin: 0 1vw;
  font-size: 24px;
 }
-.socbar2 {
+.menbar {
  display: flex;
  position: absolute;
  top: 10%;
@@ -76,7 +76,7 @@ button.soc2:hover {
  clear: both;
  display: table;
 }
-.socbar2:after {
+.menbar:after {
  content: "";
  clear: both;
  display: table;
