--- a/gallery.css
+++ b/gallery.css
@@ -50,6 +50,7 @@ body {
 
 .container .image-container img {
  width: 100%;
+ height: auto;
  margin-bottom: 1rem;
 }
 
@@ -65,6 +66,7 @@ body {
 
 .container .poster-container img {
  width: 100%;
+ height: auto;
  margin-bottom: 1rem;
 }
 
