itsy bitsy gallery 2.0
hell yeah

to do:
- make pagelinks responsive for mobile instead of just hiding it in portrait mode
- make section headers have more contrast
- fix that damn page background being stupid

--- a/gallery.css
+++ b/gallery.css
@@ -8,6 +8,10 @@ html {
  background-origin: content-box;
 }
 
+@media screen and (max-width: 700px) {
+ .seclinks {display:none;}
+}
+
 @media (max-width: 1500px) {
  html {
   background-image: url(images/bgs/ibspacemobile.webp);
@@ -32,11 +36,14 @@ body {
 }
 
 .header {
- background-color: #000000;
  justify-content: center;
  text-align: center;
- padding: 2rem 5%;
+ padding: 1rem 5%;
  margin-bottom:1rem;
+}
+
+.header h1 {
+ font-size: 50px;
 }
 
 .container {
@@ -54,10 +61,6 @@ body {
  margin-bottom: 1rem;
 }
 
-.container .image-container img:hover {
- transform: scale(1.01);
-}
-
 .container .poster-container {
  columns: 25rem 4;
  justify-content: start;
@@ -70,13 +73,29 @@ body {
  margin-bottom: 1rem;
 }
 
-.container .poster-container img:hover {
- transform: scale(1.01);
+.container .video-container {
+ columns: 33rem 3;
+ justify-content: start;
+ gap: 1.4rem;
+}
+
+.container .video-container iframe {
+ display: block;
+ height: auto;
+ width: 100%;
+ margin-bottom: 1rem;
+ aspect-ratio: 16/9;
 }
 
 .container .menubar {
  display: flex;
- justify-content: center;
+ width: 100%;
+ overflow: hidden;
+}
+
+#navbar {
+ position: sticky;
+ top: 0;
 }
 
 .container .menubar:after {
@@ -85,25 +104,59 @@ body {
  display: table;
 }
 
+.pagelinks {
+ width: 50%;
+ float: left;
+ align-self: center;
+}
+
+.seclinks {
+ width: 50%;
+ float: right;
+ align-self: center;
+ justify-self: center;
+ overflow: hidden;
+}
+
+.seclinks ul {
+ justify-self: right;
+ white-space: nowrap;
+}
+
+.seclinks li {
+ margin: 1rem;
+ transition: all 0.2s ease, visibility 0s;
+}
+
+.seclinks a {
+ text-decoration: none;
+ color: white;
+}
+
+.seclinks a:hover {
+ color: lightgray;
+}
+
+.seclinks a:active {
+ color: black;
+}
+
 li {
  display: inline-block;
 }
 
-button.menu {
+.pagelinks button {
  display: flex;
  transition: all 0.2s ease, visibility 0s;
  border-radius: 100px;
+ border-style: none;
  background: #e40770;
- background-repeat: no-repeat;
- background-position: center;
- background-size: cover;
- border: 5px solid #000000;
  padding: 15px;
  text-align: center;
  margin: 0 0.3vw;
 }
 
-button.menu:hover {
+.pagelinks button:hover {
  background: #F95DA8;
  cursor:pointer;
 }
