--- a/gallery.css
+++ b/gallery.css
@@ -10,6 +10,7 @@ html {
 
 @media screen and (max-width: 700px) {
  .seclinks {display:none;}
+ .
 }
 
 @media (max-width: 1500px) {
@@ -118,6 +119,10 @@ body {
  overflow: hidden;
 }
 
+.seclinks a .active {
+ color: #000000;
+}
+
 .seclinks ul {
  justify-self: right;
  white-space: nowrap;
@@ -141,7 +146,7 @@ body {
  color: black;
 }
 
-li {
+.seclinks li {
  display: inline-block;
 }
 
