--- a/css/shows.styles.css
+++ b/css/shows.styles.css
@@ -2,7 +2,7 @@ html {
  height: 100%;
  width: 100%;
  background-color: #000000;
- background: url(images/bgs/bg.24.11.2.webp);
+ background: url(../images/bgs/bg.24.11.2.webp);
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: cover;
