--- a/gallery.css
+++ b/gallery.css
@@ -106,7 +106,6 @@ body {
 .seclinks {
  width: 50%;
  float: right;
- display: flex;
  align-self: center;
  justify-content: right;
  white-space: nowrap;
@@ -118,6 +117,7 @@ body {
  transition: all 0.2s ease, visibility 0s;
  text-decoration: none;
  color: white;
+ float: right;
 }
 
 .seclinks a:hover {
