--- a/gallery.css
+++ b/gallery.css
@@ -9,7 +9,16 @@ html {
 }
 
 @media screen and (max-width: 700px) {
- .seclinks {display:none;}
+ #link {display:none;}
+ #ham {display:block;}
+}
+
+@media screen and (min-width: 701px) {
+ #ham {display:none;}
+ #link {display:inline-block;}
+ .seclinks {white-space:nowrap;}
+ .seclinksb {display:inline-block;}
+ #link a {display: inline-block;}
 }
 
 #navbar {background-color:#000000;}
@@ -55,7 +64,7 @@ body {
 }
 
 .container .poster-container {
- columns: 25rem 4;
+ columns: 25rem 3;
  justify-content: start;
  gap: 1.4rem;
 }
@@ -98,17 +107,16 @@ body {
 }
 
 .pagelinks {
- width: 50%;
+ width: 25%;
  float: left;
  align-self: center;
 }
 
 .seclinks {
- width: 50%;
+ width: 75%;
  float: right;
  align-self: center;
  justify-content: right;
- white-space: nowrap;
  overflow: hidden;
 }
 
@@ -121,14 +129,11 @@ body {
  transition: all 0.2s ease, visibility 0s;
  text-decoration: none;
  color: white;
+ display: block;
 }
 
 .seclinks a:hover {
  color: lightgray;
-}
-
-.seclinks li {
- display: inline-block;
 }
 
 .pagelinks button {
