--- a/music/release.css
+++ b/music/release.css
@@ -5,17 +5,21 @@
 }
 @media screen and (max-width: 700px) {
  .content-container {flex-wrap:wrap;}
- .cover {width:100%;}
- .tracklist {width:100%;}
+ .cover {width:100%;height:auto;}
+ .text {width:100%;height:50%;float:right;}
+ .tracklist {width:100%;height:25%;}
+ .listenbar {width:100%;height:25%;justify-content:center;}
 }
 
 @media screen and (min-width: 701px) {
  .content-container {flex-wrap:nowrap;}
- .cover {width:75%;}
- .tracklist {width:25%;}
+ .cover {height:100%;width:auto;max-width:40%;}
+ .text {width:75%;height:25%;float:right;}
+ .tracklist {width:100%;height:25%;}
+ .listenbar {width:100%;height:25%;justify-content:left;}
 }
 html {
- background-color: #04b2d9;
+ background-color: #0385a3;
 }
 .header {
  width: 100%;
@@ -24,16 +28,29 @@ html {
 .content-container {
  display: flex;
  margin: 1rem;
- gap: 1.4rem;
-}
-.cover {
- width: 50%;
+ gap: 1rem;
+ height: 100%;
 }
 .cover img {
  width: 100%;
  height: auto;
 }
 .tracklist {
- justify-content: left;
- width: 100%;
+ display: flex;
+ align-items: flex-start;
+}
+.listenbar {
+ display: flex;
+ margin-top:1rem;
+}
+.listenbar li {
+ display: inline-block;
+ margin-right: 1rem;
+}
+td {
+ color:white;
+ font-family:Verdana, sans-serif;
+ font-weight: bold;
+ padding: 0.5rem 0;
+ padding-top: 0;
 }
