--- a/music/release.css
+++ b/music/release.css
@@ -9,6 +9,8 @@
  .text {width:100%;height:50%;float:right;}
  .tracklist {width:100%;height:25%;}
  .listenbar {width:100%;height:25%;justify-content:center;}
+ .headert {justify-content:center;text-align:center;}
+ td {padding:0.5rem 0;}
 }
 
 @media screen and (min-width: 701px) {
@@ -17,13 +19,28 @@
  .text {width:75%;height:25%;float:right;}
  .tracklist {width:100%;height:25%;}
  .listenbar {width:100%;height:25%;justify-content:left;}
+ .headert {justify-content:left;text-align:left;}
+ td {padding:1rem 0;}
 }
 html {
  background-color: #0385a3;
 }
+.container {
+ padding: 2rem 5%;
+}
 .header {
  width: 100%;
  background-color: black;
+}
+.headert {
+ margin: 1rem;
+ margin-bottom: 0;
+}
+
+.headert h1 {
+ font-size: 45px;
+ font-family: Verdana, sans-serif;
+ color: white;
 }
 .content-container {
  display: flex;
@@ -38,6 +55,7 @@ html {
 .tracklist {
  display: flex;
  align-items: flex-start;
+ border-bottom: 2px solid white;
 }
 .listenbar {
  display: flex;
@@ -51,6 +69,4 @@ td {
  color:white;
  font-family:Verdana, sans-serif;
  font-weight: bold;
- padding: 0.5rem 0;
- padding-top: 0;
 }
