--- a/music/release.css
+++ b/music/release.css
@@ -11,6 +11,7 @@
  .listenbar {width:100%;height:25%;justify-content:center;}
  .headert {justify-content:center;text-align:center;}
  td {padding:0.5rem 0;}
+ .footer {margin-top:8rem;}
 }
 
 @media screen and (min-width: 701px) {
@@ -21,6 +22,7 @@
  .listenbar {width:100%;height:25%;justify-content:left;}
  .headert {justify-content:left;text-align:left;}
  td {padding:1rem 0;}
+ .footer {margin-top:0;}
 }
 html {
  background-color: #0385a3;
@@ -69,4 +71,13 @@ td {
  color:white;
  font-family:Verdana, sans-serif;
  font-weight: bold;
+}
+.footer {
+ position: relative;
+}
+.bottomright {
+ position: absolute;
+ bottom: 0;
+ right: 0;
+ margin: 0;
 }
