--- a/music/release.css
+++ b/music/release.css
@@ -11,7 +11,9 @@
  .listenbar {width:100%;height:25%;justify-content:center;}
  .headert {justify-content:center;text-align:center;}
  td {padding:0.5rem 0;}
- .footer {margin-top:8rem;}
+ h2 {text-align:center;}
+ .footer {margin-top:2rem;}
+ p {text-align:center;}
 }
 
 @media screen and (min-width: 701px) {
@@ -21,8 +23,9 @@
  .tracklist {width:100%;height:25%;}
  .listenbar {width:100%;height:25%;justify-content:left;}
  .headert {justify-content:left;text-align:left;}
+ h2 {text-align:left;}
  td {padding:1rem 0;}
- .footer {margin-top:0;}
+ p {text-align:left;}
 }
 html {
  background-color: #0385a3;
@@ -57,20 +60,18 @@ html {
 .tracklist {
  display: flex;
  align-items: flex-start;
- border-bottom: 2px solid white;
 }
 .listenbar {
  display: flex;
- margin-top:1rem;
+ margin:1rem 0;
 }
 .listenbar li {
  display: inline-block;
- margin-right: 1rem;
+ margin: 0 0.75rem;
 }
 td {
  color:white;
- font-family:Verdana, sans-serif;
- font-weight: bold;
+ font-family: Verdana, sans-serif;
 }
 .footer {
  position: relative;
