--- a/music/release.css
+++ b/music/release.css
@@ -14,6 +14,8 @@
  h2 {text-align:center;}
  .footer {margin-top:2rem;}
  p {text-align:center;}
+ iframe {width:100%;height:152px;}
+ .players {flex-wrap:wrap;}
 }
 
 @media screen and (min-width: 701px) {
@@ -26,6 +28,8 @@
  h2 {text-align:left;}
  td {padding:1rem 0;}
  p {text-align:left;}
+ iframe {width:33%;height:352px;}
+ .players {flex-wrap:nowrap;}
 }
 html {
  background-color: #0385a3;
