titles for iframes, updated footer for ep page

--- a/music/release.css
+++ b/music/release.css
@@ -78,7 +78,12 @@ td {
  font-family: Verdana, sans-serif;
 }
 .footer {
+ display:flex;
+ padding: 2rem 0;
+ background-color:black;
  position: relative;
+ align-items: center;
+ justify-content: center;
 }
 .bottomright {
  position: absolute;
