--- a/gallery.css
+++ b/gallery.css
@@ -157,7 +157,12 @@ body {
 }
 
 .footer {
+ display: flex;
+ padding: 2rem 0;
+ background-color: black;
  position: relative;
+ align-items: center;
+ justify-content: center;
 }
 
 .bottomright {
