--- a/music/release.css
+++ b/music/release.css
@@ -14,7 +14,7 @@
  h2 {text-align:center;}
  .footer {margin-top:2rem;}
  p {text-align:center;}
- iframe {width:100%;height:152px;}
+ iframe {width:100%;}
  .players {flex-wrap:wrap;}
 }
 
@@ -28,7 +28,7 @@
  h2 {text-align:left;}
  td {padding:1rem 0;}
  p {text-align:left;}
- iframe {width:33%;height:352px;}
+ iframe {width:33%;}
  .players {flex-wrap:nowrap;}
 }
 html {
