--- a/music/release.css
+++ b/music/release.css
@@ -10,12 +10,11 @@
  .tracklist {width:100%;height:25%;}
  .listenbar {width:100%;height:25%;justify-content:center;}
  .headert {justify-content:center;text-align:center;}
- td {padding:0.5rem 0;}
  h2 {text-align:center;}
  .footer {margin-top:2rem;}
  p {text-align:center;}
  iframe {width:100%;}
- .players {flex-wrap:wrap;}
+ .videos {flex-wrap:wrap;}
 }
 
 @media screen and (min-width: 701px) {
@@ -26,10 +25,9 @@
  .listenbar {width:100%;height:25%;justify-content:left;}
  .headert {justify-content:left;text-align:left;}
  h2 {text-align:left;}
- td {padding:1rem 0;}
  p {text-align:left;}
- iframe {width:33%;}
- .players {flex-wrap:nowrap;}
+ iframe {width:50%;}
+ .videos {flex-wrap:nowrap;}
 }
 html {
  background-color: #0385a3;
@@ -59,15 +57,19 @@ html {
 }
 .cover img {
  width: 100%;
+ aspect-ratio: 1/1;
  height: auto;
 }
 .tracklist {
  display: flex;
  align-items: flex-start;
 }
+.tracklist tr {
+ font-size: 17px;
+}
 .listenbar {
  display: flex;
- margin:1rem 0;
+ margin-top: 1rem;
 }
 .listenbar li {
  display: inline-block;
@@ -76,6 +78,12 @@ html {
 td {
  color:white;
  font-family: Verdana, sans-serif;
+ padding: 0.5rem 0;
+}
+.videos {
+ width:100%;
+ display:flex;
+ gap: 1rem;
 }
 .footer {
  display:flex;
