--- a/music/release.css
+++ b/music/release.css
@@ -54,9 +54,11 @@ html {
  gap: 1rem;
  height: 100%;
 }
+.cover picture {
+    aspect-ratio: 1/1;
+}
 .cover img {
  width: 100%;
- aspect-ratio: 1/1;
  height: auto;
 }
 .tracklist {
