fixing music page a bit

--- a/music.css
+++ b/music.css
@@ -50,12 +50,11 @@ body {
  padding: 2rem 5%;
 }
 
-.container .image-container {
- columns: 15rem 3;
- gap: 1.4rem;
+.release-container {
+    width: 100%;
 }
 
-.container .image-container img {
+.container .release-container picture {
  width: 100%;
  height: auto;
  margin-bottom: 1rem;
