--- a/gallery.css
+++ b/gallery.css
@@ -6,6 +6,13 @@ html {
  background-attachment: fixed;
  background-size: cover;
  background-origin: content-box;
+ overflow-y: scroll;
+ -ms-overflow-style: none;  /* IE and Edge */
+ scrollbar-width: none;  /* Firefox */
+}
+
+html::-webkit-scrollbar {
+    display: none; /* Chrome and the rest */
 }
 
 @media screen and (max-width: 700px) {
