ugh this navbar is frustrating af
- got the hamburger menu to be the same height as the actual text font-size, at least

--- a/gallery.css
+++ b/gallery.css
@@ -55,6 +55,10 @@ body {
  font-size: 50px;
 }
 
+.seclinksb {
+ font-size: 20px;
+}
+
 .container {
  padding: 2rem 5%;
 }
@@ -136,7 +140,7 @@ body {
 }
 
 .seclinks a {
- margin: 1rem;
+ margin: 0.5rem;
  text-decoration: none;
  color: white;
  display: block;
